--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <version>1.2.68</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.hankcs</groupId>
+            <artifactId>hanlp</artifactId>
+            <version>portable-1.7.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
